# rwb

./: Cargo.toml  LICENSE  Makefile  README.md
src/: cli.yaml  command.rs  config.rs  config.toml  gui.rs  keys.rs  main.rs  scripts.rs
src/scripts/: disable_forms.js  enable_forms.js  scroll_down.js  scroll_half_page_down.js  scroll_half_page_up.js  scroll_left.js  scroll_page_down.js  scroll_page_up.js  scroll_right.js  scroll_up.js
