[package]
name = "rwb"
version = "0.1.0"
authors = ["Nathan Fisher <nfisher.sr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
gdk = "0.13.2"
glib = "0.10.0"
gtk = "0.9.2"
url = "2.2.0"
webkit2gtk = "0.11.0"
