[package]
name = "rwb"
version = "0.1.0"
authors = ["Nathan Fisher <nfisher.sr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
gdk = "0.13.2"
gio = "0.9.1"
glib = "0.10.0"
gtk = "0.9.2"
url = "2.2.0"
webkit2gtk = "0.11.0"
